<resources>
    <string name="app_name">ClinicsAndDoctors</string>
    <string name="facebook_app_id">290850754744123</string>

    <!-- FONTS -->
    <string name="font_compact_avenir_light">fonts/AvenirLTStd-Book.otf</string>
    <string name="font_compact_avenir_medium">fonts/AvenirLTStd-Roman.otf</string>
    <string name="font_compact_avenir_bold">fonts/AvenirLTStd-Black.otf</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- ERROR MESSAGE-->
    <string name="alert_title_error">Error</string>
    <string name="error_generic">Something was wrong</string>
    <string name="error_internet">No internet connection. Connect to the internet and try again.</string>
    <string name="complete_all_fields">You must complete all fields</string>
    <string name="password_not_match">Password must match</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_password_length">The password must have more than 5 characters</string>
    <string name="error_permission">Request permissions</string>
    <string name="error_user_nor_found">This user doesn\'t exist</string>

    <!-- START -->
    <string name="clinic_and_doctors">CLINICS &amp; DOCTORS</string>
    <string name="access_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="sign_in">LOGIN WITH EMAIL</string>
    <string name="not_account">Dont\'t have an account? Register Here</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="skip"><u>SKIP</u></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_create_account">Register</string>
    <string name="title_login">Login With Email</string>
    <string name="email">Email</string>
    <string name="email_optional">Email (optional)</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="first_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Re-Type Password</string>
    <string name="finish">Finish</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="save">SAVE</string>

    <!-- FORGOT PASSWORD -->
    <string name="title_forgot_apssword">Forgot Password</string>
    <string name="recover_password">RECOVER PASSWORD</string>
    <string name="description_forgot_apssword">We will send you a sms with\na new password.</string>

    <!-- NAV BAR -->
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_terms_use">Terms of Use</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_about_us">About us</string>

    <!-- MENU -->
    <string name="see_profile"><u>See Profile</u></string>
    <string name="menu_title_profile">PROFILE</string>
    <string name="menu_title_favorite">Favorites</string>
    <string name="menu_title_terms_use">Terms of Use</string>
    <string name="menu_title_privacy_policy">Privacy Policy</string>

    <string name="title_detail">DETAIL</string>
    <string name="empty_clinics">Currently there are no clinics or doctors around you. Try increasing the mile range with the above slider.</string>

    <!-- POP UP -->
    <string name="go">GO</string>
    <string name="info">INFO</string>

    <string name="see_review"><u>Reviews</u></string>
    <string name="clinic_see_review"><u>Reviews</u></string>
    <string name="add_to_favorite">ADD TO FAVORITES</string>
    <string name="remove_from_favorite">REMOVE FROM FAVORITES</string>
    <string name="get_directions">Get Directions</string>
    <string name="rate_your_experience">Rate Your Experience At:</string>
    <string name="tell_us_bad">Tell us what we can improve?</string>
    <string name="tell_us_good">Tell us what did you like?</string>
    <string name="leave_a_comment">Leave a comment:</string>
    <string name="submit">SUBMIT</string>
    <string name="title_rating">RATING</string>
    <string name="title_reviews">REVIEWS</string>
    <string name="reviews">Reviews</string>
    <string name="rate_doctor">RATE DOCTOR</string>

    <!-- RATING -->
    <string name="rate_bad_comment1">The waiting was too long.</string>
    <string name="rate_bad_comment2">The attention wasn\'t good.</string>
    <string name="rate_bad_comment3">It was too expensive.</string>
    <string name="rate_bad_comment4">Other.</string>

    <string name="rate_good_comment1">The attention was so good.</string>
    <string name="rate_good_comment2">The place is clean and modern.</string>
    <string name="rate_good_comment3">The waiting was short.</string>
    <string name="rate_good_comment4">Other.</string>

    <string name="doctors">Doctors</string>
    <string name="clinics">Clinics</string>
    <string name="empty_favorite_doctors">You don\'t have favorite doctors yet.</string>
    <string name="empty_favorite_clinics">You don\'t have favorite clinics yet.</string>

    <!-- SIN TRADUCIR -->
    <string name="kilometers_away">Km Away</string>
    <string name="km_away">Km Away</string>
    <string name="mtrs_away">mtrs Away</string>
    <string name="login_register"><u>Login/Register</u></string>
    <string name="empty_doctors">Currently there are no doctors around you. Try increasing the mile range with the above slider.</string>
    <string name="empty_doctors_in_clinic">Currently there are no doctors in this clinic.</string>

    <string name="menu_rate">Rate</string>
    <string name="menu_add_favorite">Add To Favorites</string>
    <string name="menu_remove_favorite">Remove From Favorites</string>
    <string name="menu_go_to_page">Go To Clinic Page</string>
    <string name="menu_rate_doctor">Rate Doctor</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="removed_from_favorite">Removed from favorite</string>

    <string name="rate_clinic">RATE CLINIC</string>
    <string name="logout"><u>Logout</u></string>
    <string name="edit_rate">EDIT RATE</string>
    <string name="get_directions_with_underline"><u>Get Directions</u></string>
    <string name="call">CALL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clinics_doctors_nick">\@Clinics_Doctors</string>
    <string name="email_info">Info\@Clinicsanddoctors.net</string>

</resources>