<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_start" />

    <include
        android:id="@+id/mAppBar"
        layout="@layout/toolbar_transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="@dimen/margin_app"
        android:layout_marginRight="@dimen/margin_app"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mLabelMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:theme="@style/EditTextWhiteStyle"
            app:theme="@style/EditTextWhiteStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mMobile"
                style="@style/SignInInputFields"
                android:hint="@string/mobile"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/mLabelPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_same_view"
            android:textColorHint="@color/white"
            android:theme="@style/EditTextWhiteStyle"
            app:theme="@style/EditTextWhiteStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mPassword"
                style="@style/SignInInputFields"
                android:hint="@string/password"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/mForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_different_view"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>

    <TextView
        android:id="@+id/mSignIn"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_app"
        android:background="@drawable/bg_rectangle_rounded_init"
        android:text="@string/login" />

    <TextView
        android:id="@+id/mHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mSignIn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_app"
        android:layout_marginTop="@dimen/margin_same_view"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/not_account"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        android:visibility="gone" />

</RelativeLayout>
