<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rectangle_gradient_green"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mPhoto"
            android:layout_width="@dimen/profile_photo_size_medium"
            android:layout_height="@dimen/profile_photo_size_medium"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_app"
            android:background="@drawable/bg_photo_profile"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_clinic"
            app:civ_border_color="@color/white"
            app:civ_border_width="@dimen/border_weight" />

        <ImageView
            android:id="@+id/mPlusPhoto"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignRight="@+id/mPhoto"
            android:layout_alignTop="@+id/mPhoto"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_photo"
            android:visibility="invisible" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mContainerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_app">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextLabelStyleBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_different_view"
                android:layout_marginTop="@dimen/margin_different_view"
                android:layout_weight="1"
                android:text="@string/first_name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextLabelStyleBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_different_view"
                android:layout_weight="1"
                android:text="@string/last_name"
                android:textColor="@color/white"
                android:visibility="gone" />

        </LinearLayout>

        <EditText
            android:id="@+id/mName"
            style="@style/EditTextProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textCapSentences"
            android:textColor="@color/white"
            android:theme="@style/EditTextProfileStyle" />

        <TextView
            style="@style/TextLabelStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/mMobile"
            style="@style/EditTextProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="phone"
            android:textColor="@color/white"
            android:theme="@style/EditTextProfileStyle" />

        <TextView
            style="@style/TextLabelStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/mEmail"
            style="@style/EditTextProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:theme="@style/EditTextProfileStyle" />

        <TextView
            android:id="@+id/mPasswordLabel"
            style="@style/TextLabelStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_different_view"
            android:text="@string/password"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/mPassword"
            style="@style/EditTextProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:theme="@style/EditTextProfileStyle" />

        <TextView
            android:id="@+id/mConfirmPasswordLabel"
            style="@style/TextLabelStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_different_view"
            android:text="@string/confirm_password"
            android:textColor="@color/white"
            android:visibility="gone" />

        <EditText
            android:id="@+id/mConfirmPassword"
            style="@style/EditTextProfileStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:theme="@style/EditTextProfileStyle"
            android:visibility="gone" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/mSave"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_app"
        android:layout_marginLeft="@dimen/margin_app"
        android:layout_marginRight="@dimen/margin_app"
        android:background="@drawable/bg_rectangle_rounded_green"
        android:text="@string/save"
        android:visibility="gone" />

</LinearLayout>
